--- a/pom.xml
+++ b/pom.xml
@@ -17,5 +17,16 @@
   </dependencies>
   <build>
     <finalName>hello-world-webapp</finalName>
+            <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>11</source>
+                    <target>11</target>
+                </configuration>
+            </plugin>
+        </plugins>
   </build>
 </project>
